fixed about and save section, changed comment section to combo section , stlyed save button , cleaned up css , fixed mobile version , added background color to about section mobile view , updated read me to include url links and screen shot of landing page , need to test and try shabash button and save combo button / Per Jills completed js scripte

--- a/assets/style.css
+++ b/assets/style.css
@@ -136,17 +136,7 @@ li a{
  margin-top: 20px;
 text-align: center;
 }
-#save-btn {
-    width: 250px;
- height: 60px;
- line-height: 50px;
- background:transparent;
- color: hotpink;
- font-size: 25px;
- border: 2px solid indigo;
- margin-top: 20px;
-text-align: center;
-}
+
 iframe{
     pointer-events: none;
 }
@@ -274,11 +264,15 @@ iframe{
     width: 40%;
     font-size: 1.5rem;
     margin-left: 100px;
-       
+    padding-bottom: 2rem;    
 }
-/* comment section */
-.comment-section {
-    height: 450px;
+.h2about {
+    color: hotpink;
+    text-align: center;
+    }
+/* combo section */
+.combo-section {
+    height: 400px;
     width: 400px;
     padding:15px 10px ;
     background-size: cover;
@@ -286,53 +280,34 @@ iframe{
     align-items: center;
     
 }
-.comment-section h2 {
+.combo-section h2 {
     text-align: center;
     margin-bottom: 15px;
     color: hotpink;
 }
-
-
-textarea {
-    height: 100px;
-    width: 100%;
-    border: none;
-    border: 2px solid #aaa;
-    background-color: transparent;
-    margin-bottom: 10px;
-    resize: none;
-    outline: none;
-    transition: .5s;
-    justify-content: center;
-}
-input[type="submit"], button {
-    padding: 10px 15px;
-    border: none;
-    outline: none;
-    border-radius: 5px;
-    text-transform: uppercase;
-    font-weight: bold;
-    cursor: pointer;
-}
-input[type="submit"] {
-    color: limegreen;
-    background-color: hotpink;
-}
-button {
+#save-btn {
+    width: 150px;
+    height: 50px;
+    line-height: 50px;
+    background:transparent;
     color: hotpink;
-    background-color: transparent;
-}
-.h2about {
-color: hotpink;
-text-align: center;
-}
+    font-size: 25px;
+    border: 2px solid indigo;
+    margin-top: 20px;
+    text-align: center;
+    padding-bottom: 40px;
+    justify-content: center;
+    margin-left: 100px;
+   }
+  
+   #save-btn:hover {
+       background-color: indigo;
+   }
+   .save-combo {
 
-comment-btn {
-    display: none;
-}
- i {
-     color: hotpink;
- }
+   }
+
+
 /* socail icons */
 
  .social-icon {
@@ -394,32 +369,54 @@ comment-btn {
        
     }
 
+    
+  
  
 
     .about-container {
-        display: flex;
+        display: table-row;
         align-items: center;
-        justify-content: center;
-        background-color: #f8f8f8;
+        justify-content: space-between;
+        background-color: limegreen;
         box-shadow: 15px 7px 30px rgba(0, 0, 0, 0.2);
-        
+        width: 250px;
     }
 
 
     .about-text {
         margin-left: 20px;
-        width: 100%;
+        width: 90%;
         font-size: 0.75rem;
+        padding-bottom: 2rem;
     }
 
-    .comment-section {
+    .combo-section {
         margin-top: 20px;
         height: 300px;
-        width: 225px;
+        width: 250px;
         background-size: cover;
         background-position: center;
         text-align: center;
     }
+
+    
+
+    #save-btn {
+        width: 100px;
+        height: 60px;
+        line-height: 50px;
+        background:transparent;
+        color: hotpink;
+        font-size: 25px;
+        border: 2px solid indigo;
+        margin-top: 20px;
+        text-align: center;
+        padding-bottom: 60px;
+        margin-left: 5px;
+       }
+       #save-btn:hover {
+           background-color: indigo;
+       }
 
     .social-icon i {
         font-size: 2rem;
@@ -441,6 +438,9 @@ footer{
     padding-top: 13px;
     color: hotpink;
 }
+i {
+    color: hotpink;
+}
 
  footer h2 {
     display: inline;
@@ -448,9 +448,3 @@ footer{
     font-size: 30px;
     margin: 0;
 }
-/*
-footer div {
-    float: right;
-    line-height: 1.5;
-    text-align: right;
-} */
